// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct message for multiple expenses 1`] = `
<div>
  <h3>
    Summary
  </h3>
  <p>
    Viewing 
    2
     
    expenses
     totalling 
    $1,500.00
  </p>
</div>
`;

exports[`should render correct message for one expense 1`] = `
<div>
  <h3>
    Summary
  </h3>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $500.00
  </p>
</div>
`;
